--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
+    "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
